@@ -2,11 +2,15 @@
 
   * Fixed snprintf size with forwardmsg in server.c
   * Fixed buffer size in irc.c:irc_notice
+  * Fixed jumping to certain server right after rehash
   * Free forwardmsg in miauc.c:escape
+  * Optimized using va_lists in irc.c
   * Fixed getopt
   * Realloc-optimization in channels.c, automode.c
   * Added an option to define time between forwardmsg commits
   * Call setvbuf only if statelog is enabled
+  * Free memory if bind() fails (which causes miau to quit)
+  * stdout is no longer redirected in a file we cannot write to
   * Fool-proofed reading inbox
   * Fixed one-byte memory leak with logsuffix
   * Changed logpostfix into logsuffix
